fix: problem of TopBar is behind other components

--- a/src/components/BarComponents/TopBar/styles.module.scss
+++ b/src/components/BarComponents/TopBar/styles.module.scss
@@ -41,7 +41,7 @@
     background-color: white;
     min-width: 150px;
     box-shadow: 10px 8px 16px 0px rgba(black, 0.5);
-    z-index: 1;
+    z-index: 100;
 
     a {
       color: black;
